autoprefixed and minified

--- a/index.html
+++ b/index.html
@@ -1,51 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social Links Profile</title>
-    <link rel="stylesheet" href="./css/index.css" />
-  </head>
-
-  <body>
-    <div class="container card">
-      <div class="user">
-        <img
-          class="user__avatar"
-          src="./images/profile-photo-avatar.avif"
-          alt=""
-        />
-        <h3 class="user__name">Dadahon Dadajonov</h3>
-        <span class="user__country">Fergana, Uzbekistan</span>
-        <p class="user__profession">"Junior Front-end Developer".</p>
-        <ul class="user__social-links">
-          <li>
-            <a class="user__github" href="https://github.com/dadahond"
-              >GitHub</a
-            >
-          </li>
-          <li>
-            <a class="user__mentor" href="https://github.com/dadahond"
-              >Frontend Mentor</a
-            >
-          </li>
-          <li>
-            <a class="user__linkedin" href="https://github.com/dadahond"
-              >Linkedin</a
-            >
-          </li>
-          <li>
-            <a class="user__twitter" href="https://github.com/dadahond"
-              >Twitter</a
-            >
-          </li>
-          <li>
-            <a class="user__instagram" href="https://github.com/dadahond"
-              >Instagram</a
-            >
-          </li>
-        </ul>
-      </div>
+<!doctypehtml>
+<html lang=en>
+<meta charset=UTF-8>
+<meta content="width=device-width,initial-scale=1" name=viewport>
+<title>Social Links Profile</title>
+<link href=./css/index.css rel=stylesheet>
+<div class="card container">
+    <div class=user><img alt="" class=user__avatar src=./images/profile-photo-avatar.avif>
+        <h3 class=user__name>Dadahon Dadajonov</h3><span class=user__country>Fergana, Uzbekistan</span>
+        <p class=user__profession>"Junior Front-end Developer".
+            <ul class=user__social-links>
+                <li><a class=user__github href=https://github.com/dadahond>GitHub</a>
+                    <li><a class=user__mentor href=https://github.com/dadahond>Frontend Mentor</a>
+                        <li><a class=user__linkedin href=https://github.com/dadahond>Linkedin</a>
+                            <li><a class=user__twitter href=https://github.com/dadahond>Twitter</a>
+                                <li><a class=user__instagram href=https://github.com/dadahond>Instagram</a></ul>
     </div>
-  </body>
-</html>
+</div>
